Refactor header structure: minor HTML adjustments and initial menu CSS

--- a/scenes.html
+++ b/scenes.html
@@ -1,36 +1,83 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Les Scènes</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="/src/css/style.css"/>
-</head>
-<body>
+    <title>Festival</title>
 
-  <!-- ===== HEADER ===== -->
-  <header class="header">
-    <a class="header__link" href="/index.html">
-      <img class="header__logo" src="/assets/img/logo-festival.svg" alt="Logo du festival"/>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- CSS principal -->
+    <link rel="stylesheet" href="src/css/style.css" />
+
+    <!-- JS -->
+    <script type="module" src="src/js/menu.js"></script>
+  </head>
+
+  <body>
+    <!-- ===== HEADER ===== -->
+    <header class="header">
+      <!-- Logo -->
+      <a class="header__link" href="/index.html">
+        <img
+          class="header__logo"
+          src="assets/img/logo-festival.svg"
+          alt="Logo du festival"
+        />
+      </a>
+
+      <!-- Bouton Menu (SVG) -->
+      <button
+        class="header__menu-btn"
+        aria-label="Ouvrir le menu"
+        aria-expanded="false"
+        aria-controls="mainNav"
+      >
+        <img src="assets/icons/icon-menu.svg" alt="Menu" />
+      </button>
+
+      <!-- Menu -->
+        <nav class="header__menu menu" id="mainNav" hidden>
+             <div class="menu__header">
+    <a href="index.html" class="menu__logo">
+      <img src="assets/img/logo-festival.svg" alt="Logo du festival">
     </a>
-
-    <button class="header__menu-btn" aria-label="Ouvrir le menu" aria-expanded="false" aria-controls="mainNav">
-      <img src="/assets/icons/icon-menu.svg" alt="Menu"/>
+   
+    <button class="menu__close-btn" aria-label="Fermer le menu">
+      <img src="assets/icons/icon-close.svg" alt="Fermer">
     </button>
 
-    <nav class="header__menu menu" id="mainNav" hidden>
-      <ul class="menu__list u-list-unstyled">
-        <li class="menu__item"><a class="menu__link" href="/index.html">Accueil</a></li>
-        <li class="menu__item"><a class="menu__link" href="/about.html">À propos</a></li>
-        <li class="menu__item"><a class="menu__link" href="/programme.html">Programme</a></li>
-        <li class="menu__item"><a class="menu__link" href="/artistes.html">Artistes</a></li>
-        <li class="menu__item"><a class="menu__link" href="/scenes.html">Scènes</a></li>
-        <li class="menu__item"><a class="menu__link" href="/infos-pratiques.html">Infos pratiques</a></li>
-        <li class="menu__item"><a class="menu__link" href="/contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+        <ul class="menu__list u-list-unstyled">
+          <li class="menu__item">
+            <a class="menu__link" href="/index.html">Accueil</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="/about.html">À propos</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="/programme.html">Programme</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="/artistes.html">Artistes</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="/scenes.html">Scènes</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="/infos-pratiques.html">Infos pratiques</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
   <main>
 
@@ -141,7 +188,7 @@
   </section>
 
   </main>
-  
+
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
 
