--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     />
 
     <!-- CSS principal -->
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
 
     <!-- JS -->
-    <script type="module" src="/src/js/script.js"></script>
+    <script type="module" src="src/js/menu.js"></script>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <a class="header__link" href="/index.html">
         <img
           class="header__logo"
-          src="/assets/img/logo-festival.svg"
+          src="assets/img/logo-festival.svg"
           alt="Logo du festival"
         />
       </a>
@@ -39,11 +39,20 @@
         aria-expanded="false"
         aria-controls="mainNav"
       >
-        <img src="/assets/icons/icon-menu.svg" alt="Menu" />
+        <img src="assets/icons/icon-menu.svg" alt="Menu" />
       </button>
 
       <!-- Menu -->
-      <nav class="header__menu menu" id="mainNav" hidden>
+        <nav class="header__menu menu" id="mainNav" hidden>
+             <div class="menu__header">
+    <a href="index.html" class="menu__logo">
+      <img src="assets/img/logo-festival.svg" alt="Logo du festival">
+    </a>
+   
+    <button class="menu__close-btn" aria-label="Fermer le menu">
+      <img src="assets/icons/icon-close.svg" alt="Fermer">
+    </button>
+
         <ul class="menu__list u-list-unstyled">
           <li class="menu__item">
             <a class="menu__link" href="/index.html">Accueil</a>
