--- a/artistes.html
+++ b/artistes.html
@@ -81,269 +81,264 @@
     </header>
   <main> 
   <!-- ===== PAGE TITLE ===== -->
-  <section class="page-title page-title--gray">
-    <h1>Artistes</h1>
+<section class="page-title page-title--gray">
+  <h1>Artistes</h1>
+</section>
+
+<!-- ===== ARTISTS LIST ===== -->
+<main class="artists-list">
+
+  <!-- Artist Section (повторяется для каждого артиста) -->
+  <section class="artist-section">
+    <div class="artist-photo" style="background-image: url('/assets/img/roosevelt.jpg')"></div>
+    <div class="artist-info">
+      <div class="artist-header">
+        <div class="artist-name">Roosevelt</div>
+        <a href="/artiste.html" class="artist-link">
+          <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
+        </a>
+      </div>
+      <div class="artist-meta">
+        <span class="artist-genre">Chill-pop</span>
+        <span class="artist-dates">26 - 28 juin</span>
+        <span class="artist-scene">Le Pré de la Rose</span>
+      </div>
+      <div class="artist-divider"></div>
+      <p class="artist-description">
+        Producteur allemand qui crée une ambiance douce et dansante, mêlant synthés et chill-pop.
+      </p>
+    </div>
   </section>
 
-  <!-- ===== ARTISTS LIST ===== -->
-  <main class="artists-list">
-
-    <!-- Artist card (repeat 9 times) -->
-    <article class="artist-card">
-      <div class="artist-card__img">
-        <img src="/assets/img/roosevelt.jpg" alt="Roosevelt">
+  <section class="artist-section">
+    <div class="artist-photo" style="background-image: url('/assets/img/en-attendant-ana.jpg')"></div>
+    <div class="artist-info">
+      <div class="artist-header">
+        <div class="artist-name">En Attendant Ana</div>
+        <a href="/artiste.html" class="artist-link">
+          <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
+        </a>
       </div>
-      <div class="artist-card__info">
-        <div class="artist-card__header">
-          <h2 class="artist-card__name">Roosevelt</h2>
-          <a href="/artiste.html" class="artist-card__link">
-            <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
-          </a>
-        </div>
-        <div class="artist-card__details">
-          <span class="artist-card__genre">Chill-pop</span>
-          <span class="artist-card__dates">26 - 28 juin</span>
-          <span class="artist-card__scene">Le Pré de la Rose</span>
-        </div>
-        <hr class="artist-card__divider">
-        <p class="artist-card__description">
-          Producteur allemand qui crée une ambiance douce et dansante, mêlant synthés et chill-pop.
-        </p>
+      <div class="artist-meta">
+        <span class="artist-genre">Indie pop</span>
+        <span class="artist-dates">26 - 28 juin</span>
+        <span class="artist-scene">Le Pré de la Rose</span>
       </div>
-    </article>
+      <div class="artist-divider"></div>
+      <p class="artist-description">
+        Un groupe parisien au style chaleureux, porté par une indie pop délicate et lumineuse.
+      </p>
+    </div>
+  </section>
 
-    
-    <article class="artist-card">
-      <div class="artist-card__img">
-        <img src="/assets/img/en-attendant-ana.jpg" alt="En Attendant Ana">
+  <section class="artist-section">
+    <div class="artist-photo" style="background-image: url('/assets/img/caramelo-de-cuba.png')"></div>
+    <div class="artist-info">
+      <div class="artist-header">
+        <div class="artist-name">Caramelo de Cuba</div>
+        <a href="/artiste.html" class="artist-link">
+          <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
+        </a>
       </div>
-      <div class="artist-card__info">
-        <div class="artist-card__header">
-          <h2 class="artist-card__name">En Attendant Ana</h2>
-          <a href="/artiste.html" class="artist-card__link">
-            <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
-          </a>
-        </div>
-        <div class="artist-card__details">
-          <span class="artist-card__genre">indie pop</span>
-          <span class="artist-card__dates">26 - 28 juin</span>
-          <span class="artist-card__scene">Le Pré de la Rose</span>
-        </div>
-        <hr class="artist-card__divider">
-        <p class="artist-card__description">
-          Un groupe parisien au style chaleureux, porté par une indie pop délicate et lumineuse.
-        </p>
+      <div class="artist-meta">
+        <span class="artist-genre">Jazz fusion</span>
+        <span class="artist-dates">26 - 28 juin</span>
+        <span class="artist-scene">Le Pré de la Rose</span>
       </div>
-    </article>
+      <div class="artist-divider"></div>
+      <p class="artist-description">
+        Énergie chaleureuse et rythmes latins, une fusion vibrante dans un style jazz fusion.
+      </p>
+    </div>
+  </section>
 
-    
-    <article class="artist-card">
-      <div class="artist-card__img">
-        <img src="/assets/img/caramelo-de-cuba.png" alt="Caramelo de Cuba">
+  <section class="artist-section">
+    <div class="artist-photo" style="background-image: url('/assets/img/matteo-mancuso.jpg')"></div>
+    <div class="artist-info">
+      <div class="artist-header">
+        <div class="artist-name">Matteo Mancuso</div>
+        <a href="/artiste.html" class="artist-link">
+          <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
+        </a>
       </div>
-      <div class="artist-card__info">
-        <div class="artist-card__header">
-          <h2 class="artist-card__name">Caramelo de Cuba</h2>
-          <a href="/artiste.html" class="artist-card__link">
-            <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
-          </a>
-        </div>
-        <div class="artist-card__details">
-          <span class="artist-card__genre">jazz fusion</span>
-          <span class="artist-card__dates">26 - 28 juin</span>
-          <span class="artist-card__scene">Le Pré de la Rose</span>
-        </div>
-        <hr class="artist-card__divider">
-        <p class="artist-card__description">
-          Énergie chaleureuse et rythmes latins, une fusion vibrante dans un style jazz fusion.
-        </p>
+      <div class="artist-meta">
+        <span class="artist-genre">jazz fusion</span>
+        <span class="artist-dates">26,  28 juin</span>
+        <span class="artist-scene">La Roselière</span>
       </div>
-    </article>
+      <div class="artist-divider"></div>
+      <p class="artist-description">
+        Jeune prodige de la guitare, il offre un jeu virtuose et lumineux dans un style jazz fusion.
+      </p>
+    </div>
+  </section>
 
-
-    <article class="artist-card">
-      <div class="artist-card__img">
-        <img src="/assets/img/limperatrice.png" alt="L’Impératrice">
+    <section class="artist-section">
+    <div class="artist-photo" style="background-image: url('/assets/img/limperatrice.png')"></div>
+    <div class="artist-info">
+      <div class="artist-header">
+        <div class="artist-name">L’Impératrice</div>
+        <a href="/artiste.html" class="artist-link">
+          <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
+        </a>
       </div>
-      <div class="artist-card__info">
-        <div class="artist-card__header">
-          <h2 class="artist-card__name">L’Impératrice</h2>
-          <a href="/artiste.html" class="artist-card__link">
-            <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
-          </a>
-        </div>
-        <div class="artist-card__details">
-          <span class="artist-card__genre">disco-pop</span>
-          <span class="artist-card__dates">27 - 28 juin</span>
-          <span class="artist-card__scene">Le Pré de la Rose</span>
-        </div>
-        <hr class="artist-card__divider">
-        <p class="artist-card__description">
-          Groupe français aux sons doux et rétro, parfait mélange de disco-pop et d’élégance moderne.
-        </p>
+      <div class="artist-meta">
+        <span class="artist-genre">disco-pop</span>
+        <span class="artist-dates">26,  28 juin</span>
+        <span class="artist-scene">Le Pré de la Rose 
+La Roselière</span>
       </div>
-    </article>
+      <div class="artist-divider"></div>
+      <p class="artist-description">
+        Groupe français aux sons doux et rétro, parfait mélange de disco-pop et d’élégance moderne.
+      </p>
+    </div>
+  </section>
 
 
-    <article class="artist-card">
-      <div class="artist-card__img">
-        <img src="/assets/img/youn-sun-nah.jpg" alt="Youn Sun Nah">
+    <section class="artist-section">
+    <div class="artist-photo" style="background-image: url('/assets/img/nicola-conte.jpg')"></div>
+    <div class="artist-info">
+      <div class="artist-header">
+        <div class="artist-name">Nicola Conte</div>
+        <a href="/artiste.html" class="artist-link">
+          <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
+        </a>
       </div>
-      <div class="artist-card__info">
-        <div class="artist-card__header">
-          <h2 class="artist-card__name">Youn Sun Nah</h2>
-          <a href="/artiste.html" class="artist-card__link">
-            <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
-          </a>
-        </div>
-        <div class="artist-card__details">
-          <span class="artist-card__genre">vocal jazz</span>
-          <span class="artist-card__dates">26,  28 juin</span>
-          <span class="artist-card__scene">La Roselière</span>
-        </div>
-        <hr class="artist-card__divider">
-        <p class="artist-card__description">
-          Voix aérienne et expressive, Youn Sun Nah apporte une touche poétique de vocal jazz moderne.
-        </p>
+      <div class="artist-meta">
+        <span class="artist-genre">jazz</span>
+        <span class="artist-dates">26,  28 juin</span>
+        <span class="artist-scene">La Roselière</span>
       </div>
-    </article>
+      <div class="artist-divider"></div>
+      <p class="artist-description">
+        Producteur italien au style élégant, mêlant groove et ambiance cinématique dans un jazz raffiné.
+      </p>
+    </div>
+  </section>
 
 
 
-
-        <article class="artist-card">
-      <div class="artist-card__img">
-        <img src="/assets/img/nicola-conte.jpg" alt="Nicola Conte">
+    <section class="artist-section">
+    <div class="artist-photo" style="background-image: url('/assets/img/jacob-collier.jpg')"></div>
+    <div class="artist-info">
+      <div class="artist-header">
+        <div class="artist-name">Jacob Collier</div>
+        <a href="/artiste.html" class="artist-link">
+          <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
+        </a>
       </div>
-      <div class="artist-card__info">
-        <div class="artist-card__header">
-          <h2 class="artist-card__name">Nicola Conte</h2>
-          <a href="/artiste.html" class="artist-card__link">
-            <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
-          </a>
-        </div>
-        <div class="artist-card__details">
-          <span class="artist-card__genre">jazz</span>
-          <span class="artist-card__dates">26 - 27 juin</span>
-          <span class="artist-card__scene">La Roselière</span>
-        </div>
-        <hr class="artist-card__divider">
-        <p class="artist-card__description">
-          Producteur italien au style élégant, mêlant groove et ambiance cinématique dans un jazz raffiné.
-        </p>
+      <div class="artist-meta">
+        <span class="artist-genre">jazz fusion</span>
+        <span class="artist-dates">27 juin</span>
+        <span class="artist-scene">La Roselière</span>
       </div>
-    </article>
+      <div class="artist-divider"></div>
+      <p class="artist-description">
+        Musicien multi-instrumentiste, connu pour ses harmonies innovantes entre vocal jazz et jazz fusion.
+      </p>
+    </div>
+  </section>
 
 
 
-
-
-
-        <article class="artist-card">
-      <div class="artist-card__img">
-        <img src="/assets/img/matteo-mancuso.jpg" alt="Matteo Mancuso">
+    <section class="artist-section">
+    <div class="artist-photo" style="background-image: url('/assets/img/erik-truffaz.jpg')"></div>
+    <div class="artist-info">
+      <div class="artist-header">
+        <div class="artist-name">Erik Truffaz</div>
+        <a href="/artiste.html" class="artist-link">
+          <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
+        </a>
       </div>
-      <div class="artist-card__info">
-        <div class="artist-card__header">
-          <h2 class="artist-card__name">Matteo Mancuso</h2>
-          <a href="/artiste.html" class="artist-card__link">
-            <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
-          </a>
-        </div>
-        <div class="artist-card__details">
-          <span class="artist-card__genre">jazz fusion</span>
-          <span class="artist-card__dates">26,  28 juin</span>
-          <span class="artist-card__scene">La Roselière</span>
-        </div>
-        <hr class="artist-card__divider">
-        <p class="artist-card__description">
-          Jeune prodige de la guitare, il offre un jeu virtuose et lumineux dans un style jazz fusion.
-        </p>
+      <div class="artist-meta">
+        <span class="artist-genre">electro-jazz</span>
+        <span class="artist-dates">26,  28 juin</span>
+        <span class="artist-scene">La Roselière</span>
       </div>
-    </article>
+      <div class="artist-divider"></div>
+      <p class="artist-description">
+        Trompettiste français reconnu pour son son hypnotique et ses explorations electro-jazz.
+      </p>
+    </div>
+  </section>
 
 
 
-
-
-        <article class="artist-card">
-      <div class="artist-card__img">
-        <img src="/assets/img/erik-truffaz.jpg" alt="Erik Truffaz">
+    <section class="artist-section">
+    <div class="artist-photo" style="background-image: url('/assets/img/youn-sun-nah.jpg')"></div>
+    <div class="artist-info">
+      <div class="artist-header">
+        <div class="artist-name">Youn Sun Nah</div>
+        <a href="/artiste.html" class="artist-link">
+          <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
+        </a>
       </div>
-      <div class="artist-card__info">
-        <div class="artist-card__header">
-          <h2 class="artist-card__name">Erik Truffaz</h2>
-          <a href="/artiste.html" class="artist-card__link">
-            <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
-          </a>
-        </div>
-        <div class="artist-card__details">
-          <span class="artist-card__genre">electro-jazz</span>
-          <span class="artist-card__dates">27 - 28 juin</span>
-          <span class="artist-card__scene">La Roselière</span>
-        </div>
-        <hr class="artist-card__divider">
-        <p class="artist-card__description">
-          Trompettiste français reconnu pour son son hypnotique et ses explorations electro-jazz.
-        </p>
+      <div class="artist-meta">
+        <span class="artist-genre">vocal jazz</span>
+        <span class="artist-dates">26,  28 juin</span>
+        <span class="artist-scene">La Roselière</span>
       </div>
-    </article>
+      <div class="artist-divider"></div>
+      <p class="artist-description">
+        Voix aérienne et expressive, Youn Sun Nah apporte une touche poétique de vocal jazz moderne.
+      </p>
+    </div>
+  </section>
 
-    <article class="artist-card">
-      <div class="artist-card__img">
-        <img src="/assets/img/jacob-collier.jpg" alt="Jacob Collier">
-      </div>
-      <div class="artist-card__info">
-        <div class="artist-card__header">
-          <h2 class="artist-card__name">Jacob Collier</h2>
-          <a href="/artiste.html" class="artist-card__link">
-            <img src="/assets/icons/icon-arrow-right.svg" alt="Voir la page de l'artiste">
-          </a>
-        </div>
-        <div class="artist-card__details">
-          <span class="artist-card__genre">vocal jazz / jazz fusion</span>
-          <span class="artist-card__dates">27 juin</span>
-          <span class="artist-card__scene">La Roselière</span>
-        </div>
-        <hr class="artist-card__divider">
-        <p class="artist-card__description">
-          Musicien multi-instrumentiste, connu pour ses harmonies innovantes entre vocal jazz et jazz fusion.
-        </p>
-      </div>
-    </article>
-
-
-   
+</main>
 
   </main>
 
-  <!-- ===== FOOTER ===== -->
-  <footer class="footer">
-    <div class="footer__top">
-      <a class="footer__logo" href="/index.html">
-        <img src="/assets/img/logo-festival.svg" alt="Logo du festival">
+   <!-- ===== FOOTER ===== -->
+<footer class="footer">
+
+  <!-- Logo + social -->
+  <div class="footer__top">
+
+    <img src="assets/img/logo-festival.svg" alt="Logo du festival" class="footer__logo">
+
+    <div class="footer__socials">
+      <a href="#" aria-label="Email">
+        <img src="assets/icons/icon-mail.svg" alt="Email">
       </a>
-      <div class="footer__socials">
-        <a href="mailto:contact@example.com"><img src="/assets/icons/icon-mail.svg" alt="Mail"></a>
-        <a href="#"><img src="/assets/icons/icon-youtube.svg" alt="YouTube"></a>
-        <a href="#"><img src="/assets/icons/icon-instagram.svg" alt="Instagram"></a>
-        <a href="#"><img src="#"><img src="/assets/icons/icon-tiktok.svg" alt="TikTok"></a>
-        <a href="#"><img src="#"><img src="/assets/icons/icon-facebook.svg" alt="Facebook"></a>
-      </div>
+
+      <a href="#" aria-label="YouTube">
+        <img src="assets/icons/icon-youtube.svg" alt="YouTube">
+      </a>
+
+      <a href="#" aria-label="Instagram">
+        <img src="assets/icons/icon-instagram.svg" alt="Instagram">
+      </a>
+
+      <a href="#" aria-label="TikTok">
+        <img src="assets/icons/icon-tiktok.svg" alt="TikTok">
+      </a>
+
+      <a href="#" aria-label="Facebook">
+        <img src="assets/icons/icon-facebook.svg" alt="Facebook">
+      </a>
     </div>
-    <div class="footer__middle">
-      <p>Conditions générales</p>
-      <p>Gérer les cookies</p>
-    </div>
-    <div class="footer__bottom">
-      <p>
-        Projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département 
-        <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank">
-          MMi de Montbéliard
-        </a>
-      </p>
-    </div>
-  </footer>
+
+  </div>
+
+  <!-- Legal links -->
+  <div class="footer__links">
+    <a href="#" class="footer__link">Conditions générales</a>
+    <a href="#" class="footer__link">Gérer les cookies</a>
+  </div>
+
+  <!-- Bottom text -->
+  <div class="footer__bottom">
+    <p>
+      Projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département 
+      <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank">
+        MMi de Montbéliard
+      </a>
+    </p>
+  </div>
+
+</footer>
 
 </body>
 </html>
