appdate page artiste

--- a/artiste.html
+++ b/artiste.html
@@ -80,7 +80,7 @@
       </nav>
     </header>
 
-   <main style="background: #534F4B; color: #F8EEE2;">
+  <main class="artist-page">
 
   <!-- ===== HERO IMAGE ===== -->
   <section class="artist-hero">
